--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.security.user.name=user
 spring.security.user.password=password
+logging.level.com.example=DEBUG
+logging.level.org.springframework.security=DEBUG
