--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,13 @@ spring.datasource.password=Vijay@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
-spring.security.user.name=user
+spring.security.user.name=2b9892aa-9
 spring.security.user.password=password
 logging.level.com.example=DEBUG
+logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
+# logging.level.org.thymeleaf=DEBUG
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.cache=false
