--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,26 @@
     		<version>0.12.6</version>
     		<scope>runtime</scope>
 		</dependency>
+		<dependency>
+    		<groupId>com.itextpdf</groupId>
+    		<artifactId>kernel</artifactId>
+    		<version>7.2.5</version>
+		</dependency>
+		<!-- <dependency>
+   			<groupId>com.itextpdf</groupId>
+    		<artifactId>layout</artifactId>
+    		<version>7.2.5</version>
+		</dependency> -->
+		<!-- <dependency>
+    		<groupId>com.itextpdf</groupId>
+    		<artifactId>itextpdf</artifactId>
+    		<version>5.5.13.3</version>
+		</dependency> -->
+		<dependency>
+    <groupId>com.itextpdf</groupId>
+    <artifactId>html2pdf</artifactId>
+    <version>2.1.2</version>
+</dependency>
 
 	</dependencies>
 
